tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__SpecificEnchantm-AAAAAAAAAAAAAAAAAAAAqg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 170,
  "prerequisites": [
    141
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Enchanting books is, just as it is for items, random. And that's annoying if you need a specific enchantment on your tool or armor. Now there's a way to actually select enchantments. For a price, obviously.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSpecific Enchantments",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    141
  ],
  "rewards": [],
  "tasks": []
}
