tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Styrene-AAAAAAAAAAAAAAAAAAAGVA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1620,
  "prerequisites": [
    1617
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Putting Benzene and Ethylene in the Chemical Reactor gives you Styrene.\n\n[note]And also hydrogen, just pack that away with the rest.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lStyrene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1617
  ],
  "rewards": [],
  "tasks": []
}
