tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__StyreneButadiene-AAAAAAAAAAAAAAAAAAAGfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1660,
  "prerequisites": [
    1622
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Add sulfur to the raw dust to get molten styrene-butadiene rubber, then solidify it to get sheets.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lStyrene-Butadiene Rubber Sheet",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1622
  ],
  "rewards": [],
  "tasks": []
}
