tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__TeslaWouldbeProu-AAAAAAAAAAAAAAAAAAAF3g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1502,
  "prerequisites": [
    166,
    989
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of sticking your EnderIO items in the capacitor bank to charge it? Time to make a wireless charger.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lTesla Would be Proud",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    166,
    989
  ],
  "rewards": [],
  "tasks": []
}
