tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Tier3HV-AAAAAAAAAAAAAAAAAAAAoA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 160,
  "prerequisites": [
    753,
    838,
    750
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your first hull, as usual...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lTier 3 (HV)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "tierthemes:hv",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    753,
    838,
    750
  ],
  "rewards": [],
  "tasks": []
}
