tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__TitaniumFinally-AAAAAAAAAAAAAAAAAAADXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 860,
  "prerequisites": [
    81,
    1012
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You just need to cool down those ingots in your Vacuum Freezer and you'll get your first Titanium.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lTitanium, Finally",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    81,
    1012
  ],
  "rewards": [],
  "tasks": []
}
