tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__UUMatter-AAAAAAAAAAAAAAAAAAAHVQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1877,
  "prerequisites": [
    1876
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now you can actually make the UUM with a Mass Fabricator. Well, technically you could make it without UUA, but that's way more expensive. To make sure it only runs with UUA, put a programmed circuit (any value) in the machine's slot. UUMatter can be used for some very specific things, such as replicating §osome§r materials (check NEI, mostly/all periodic table), used with crops to create an ore, some specific high-level recipes need it, and...you can also sit in it to get regen.\n\nThe energy usage and overclocking of the Mass Fabricator is different from the usual GT way. To have fixed EU to UUM ratios for all tiers, the machine does perfect 2/2 overclocks. It also starts with a very high amperage in LV. The following chart should make it more clear:\n\nTier  Amps       EU/t         Time\nLV     8A         256          160\nMV     4A         512           80\nHV     2A        1024           40\nEV     1A        2048           20\nIV     0.5A      4096           10\netc.\n\nPut in power (and hopefully UUA), and out comes UUM.\n\nFor now, just stockpile the UU matter. You need data orbs to use the replicator, and that's explained next tier.\n\n[note]You only need to complete one of the tasks.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lUUMatter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1876
  ],
  "rewards": [],
  "tasks": []
}
